fix(layout): overflow hidden

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
 .app {
